--- a/src/main/resources/assets/vampirism/guide/lang/nl_NL.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/nl_NL.lang
@@ -11,6 +11,9 @@ guide.vampirism.gettingStarted.overview.text=Vampirisme is een mod die een hele 
 guide.vampirism.gettingStarted.firstSteps.title=Eerste stappen
 guide.vampirism.gettingStarted.firstSteps.text=U zal beginnen als een gewone speler, om een vampier te worden moet je gebeten door een vampier. Dus ofwel laat ze je raken met opzet of gewoon wachten tot het per ongeluk gebeurt. Wanneer zij raken u er is een kans dat u een drankje effect genaamd "Sanguinare Vampiris" krijgt, die een Minecraft dag duurt. Nadat het effect is beëindigd, Word je een vampier. In het geval dat u geen vampier wilt worden, kunt u altijd het effect annuleren met een emmer melk. Als alternatief kunt u met de rechtermuisknop met Vampier tanden in je hand wat bloed injecteren in u en krijgt u hetzelfde effect als hierboven.
 guide.vampirism.gettingStarted.asAVampire.title=Als een vampier
+guide.vampirism.gettingStarted.asAVampire.text=Zodra u een vampier bent, is een van uw belangrijkste bronnen van bloed (ten minste de beste bron) dorpelingen en je moet je veel van hen vinden. Kijk uit, hoewel, er zijn nog steeds vampieren die u aanvallen, hetzelfde als wanneer u een normale speler bent. De vampierenjagers, echter, zullen u niet aanvallen, wanneer u een niveau 1 Vampier bent.\nAls een vampier moet u kijken hoeveel bloed u hebt. door de 'F'-toets in te drukken zuigt u bloed van dorpsbewoners en sommige mobs om meer bloed te verkrijgen. Extra bloed kan worden opgeslagen in een bloed fles. Als u bloed wilt overbrengen van bloed-fles en de bloed Bar, Klik met de rechtermuisknop of shift klik met de rechtermuisknop. U weet van welke mobs je geen bloed van kunt krijgen, want u ontvangt schade als u probeert om hun bloed te zuigen. In het begin u zult een niveau 1-vampier (het niveau wordt weergegeven boven uw XP-niveau) en hebt u verbeterde snelheid, gezondheid en kracht.\nOm naar een hoger vampieren level te behalen, moeten er verschillende rituelen uitgevoert worden. Wanneer u een bepaald niveau haalt, zullen Vampires je niet langer aanvallen, maar Vampierenjagerswel. Als u door de niveaus vooruitgaat zullen uw vaardigheden verbeteren, maar sommige nadelen zoals beschadiging door de zon kunnen tevoorschijn komen.
+guide.vampirism.gettingStarted.biteableCreatures.title=Gebeten wezens
+guide.vampirism.gettingStarted.biteableCreatures.text=Wanneer je het bloed van een wezen zuigt, neem je een beetje bloed van hen weg. Hoewel het schepsel met een laag bloed niveau zwak is, zal het langzaam bloed genereren.\nAls je toch meer bloed zuigt, het zal sterven of het zou een vampier kunnen worden. veranderde wezens zullen anders handelen dan normaal, ze hebben zonneschade, maar proberen de zon te ontwijken.\nVampier dorpelingen hebben wellicht zelfs speciale aanbiedingen voor u.\nU kunt ook bloed zuigen van andere spelers op uw server. Omdat zij in staat om zichzelf te verdedigen, is dit alleen mogelijk van achteren.
 
 #Items and Blocks
 guide.vampirism.itemsAndBlocks.category=Spullen en blokken
@@ -30,6 +33,8 @@ guide.vampirism.itemsAndBlocks.altars.title=Altaar blokken
 guide.vampirism.itemsAndBlocks.coffin.text=De kist kan worden gebruikt om te slapen tijdens de dag en uw spawn-punt wilt instellen. Het is aan te raden de kist te zetten op een plaats waar de zon niet aan kan. U kunt de opvulkleur wijzigen door shift-rechts-klikken met een kleurstof daarop.
 guide.vampirism.itemsAndBlocks.used_for_minions=Gebruikt voor volgelingen
 guide.vampirism.itemsAndBlocks.blood_eye.text=Kan worden gebruikt om het dichtstbijzijnde kasteel te zoeken
+guide.vampirism.itemsAndBlocks.found.weakVampireFang=Zwakke vampieren laten deze vallen, zoals veranderde dorpelingen. kan gecombineer worden om een sterkere versie te maken.
+guide.vampirism.itemsAndBlocks.found.weakHumanHearth=Zwakke mensen laten deze vallen, zoals dorpelingen. kunnen gecombineer worden om een sterkere versie te maken.
 
 #Levels
 guide.vampirism.levels.introduction.title=Inleiding
@@ -47,11 +52,13 @@ guide.vampirism.levels.category=Hoe niveaus omhoog gaan
 
 #Mobs
 guide.vampirism.mobs.category=Wezens
+guide.vampirism.mobs.hunter.text=Jaagt op vampieren ;)/n verschijnt in dorpen of in kleine kampen over de hele wereld. Vallen alleen spelers aan met een vampier niveau hoger dan %s. / nVampieren jagers in de buurt van dorpen proberen hun dorp te verdedigen.
 guide.vampirism.mobs.vampire.text=Valt alleen spelers aan met een vampier niveau hoger dan %s. / nook vallen ze dorpelingen aan en maakt ze vampier. / ns'nachts actief
 guide.vampirism.mobs.vampire_baron.text=Verschijnt zelden in vampier biotopen. /nVerchijnt in verschillende niveaus gedeeltelijk afhankelijk van het spelers niveau. / nLaat zuiver bloed vallen. / nIs zeer sterke en roept minions die hem helpen
 guide.vampirism.mobs.vampire_minion.title=Vampieren volgeling
 guide.vampirism.mobs.vampire_minion.text=Ondergeschikt aan hun heer. / nHebben de textuur van hun heer. / nKan worden gecontroleerd door vampier heer spelers.
 guide.vampirism.mobs.ghost.text=Verschijnd in de vampieren biotoop.
+guide.vampirism.mobs.dracula.text=Vampier heer die in een groot kasteel woont. Neem een kijkje op de vampieren heer sectie voor meer informatie.
 
 #VampirePlayer
 guide.vampirism.vplayer.category=Vampieren speler functies
