--- a/src/main/resources/assets/vampirism/guide/lang/pt_BR.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/pt_BR.lang
@@ -11,6 +11,9 @@ guide.vampirism.gettingStarted.overview.text=Vampirismo é um mod que adiciona u
 guide.vampirism.gettingStarted.firstSteps.title=Primeiros passos
 guide.vampirism.gettingStarted.firstSteps.text=Você vai começar para fora como um jogador regular, para se tornar um vampiro, que você tem que ser mordido por um vampiro. Também deixe-os te bater de propósito ou só Esperem até que aconteça por acaso. Quando eles atingiram você há uma chance, você recebe um efeito de poção, chamado "Sanguinare Vampiris" que dura um dia de Minecraft. Após ter terminado a poção, você se torna um vampiro. No caso de você não quer se tornar um, você sempre pode cancelar o efeito com um balde de leite. Alternativamente você pode botão direito do mouse com presas de vampiro em mão para injetar um pouco de sangue em você e obter o mesmo efeito como acima.
 guide.vampirism.gettingStarted.asAVampire.title=Como um vampiro
+guide.vampirism.gettingStarted.asAVampire.text=Depois de se tornar um vampiro, uma de suas principais fontes de sangue (pelo menos a melhor fonte) são moradores e você deve encontrar muitos deles. Cuidado, porém, ainda há vampiros que podem atacá-lo como se você fosse um jogador regular. Os caçadores de vampiros, no entanto, não irão atacá-lo enquanto você é um vampiro nível um.\n Como um vampiro, você precisa prestar atenção à quantidade de sangue que você tem. Sugue o sangue de moradores e mendigos pressionando 'F' para obter mais sangue. Sangue extra pode ser armazenado numa garrafa de sangue. Se você quiser transferir sangue entre o frasco de sangue e a barra de sangue, use o botão direito ou Shift + clique direito do mouse. Ao olhar para uma criatura da qual você pode sugar o sangue, aparecerão pequenas presas como indicador. Para todas as outras criaturas, você causará dano por mordê-las. No começo, você vai ser um vampiro nível um (o nível é exibido acima do seu nível de experiência) e melhoraram a velocidade, saúde e força.\nPara chegar a níveis mais elevados de vampiro, é necessário executar diferentes rituais. Quando você atingir um certo nível, os vampiros deixarão de atacá-lo, mas caçadores de vampiro atacarão. Ao avançar através dos níveis, suas habilidades melhorarão, porém surgirão algumas desvantagens, como danos causados ​​pelo sol.
+guide.vampirism.gettingStarted.biteableCreatures.title=Criaturas mordidas
+guide.vampirism.gettingStarted.biteableCreatures.text=Quando sugar o sangue de uma criatura, você retirará um pouco do seu sangue. Quando a criatura tiver um nível baixo de sangue, ela ficará fraca, mas regenerará seu sangue lentamente.\nContudo, se você sugar mais sangue dela, ela morrerá ou se tornará um vampiro. Criatura transformadas agirão um pouco diferente das normais. Ela sofrerão danos do sol e tentarão fugir dele.\nVampiros aldeãos podem até ter ofertas especiais para você.\nVocê também pode sugar o sangue de outros jogadores em seu servidor. Porque eles são capazes de se defender um pouco, isso só é possível por trás.
 
 #Items and Blocks
 guide.vampirism.itemsAndBlocks.category=Blocos e itens
@@ -30,6 +33,8 @@ guide.vampirism.itemsAndBlocks.altars.title=Blocos de altar
 guide.vampirism.itemsAndBlocks.coffin.text=O caixão pode ser usado para dormir durante o dia e para definir o seu ponto de desova. Isso é recomendo colocá-lo no lugar onde o sol não dá. Você pode alterar a cor do interior, shift-direito-clicando com uma tintura nele. 
 guide.vampirism.itemsAndBlocks.used_for_minions=Usado pelos minions
 guide.vampirism.itemsAndBlocks.blood_eye.text=Pode ser usado para localizar o castelo mais proximo
+guide.vampirism.itemsAndBlocks.found.weakVampireFang=Estes são descartados por vampiros fracos como aldeões convertidos. Podem ser combinados para criar uma versão mais forte.
+guide.vampirism.itemsAndBlocks.found.weakHumanHearth=Estas são descartadas humanos fracos, como aldeões. Podem ser combinados para criar uma versão mais forte.
 
 #Levels
 guide.vampirism.levels.introduction.title=Introdução
@@ -47,11 +52,13 @@ guide.vampirism.levels.category=Como subir de nível
 
 #Mobs
 guide.vampirism.mobs.category=Mobs
+guide.vampirism.mobs.hunter.text=Caça vampiros ;) /n Encontra-se em aldeias ou em pequenos acampamentos em todo o mundo. Só ataca jogadores com um nível de vampiro superior a %s. /n Caçadores de vampiros próximos à aldeias tentarão defender sua aldeia.
 guide.vampirism.mobs.vampire.text=Ataca os jogadores desde que eles não têm um nível de vampiro superior %s. / nAlso ataca aldeões e torna a vampiro. / Night ativo
 guide.vampirism.mobs.vampire_baron.text=Spawna raramente em biomas de vampiro./nOcorre em níveis diferentes, dependendo parcialmente do level do jogador./nDropa "Sangue Puro"./nÉ bem forte e sumona minions que irao ajudar ele
 guide.vampirism.mobs.vampire_minion.title=Vampiro Minion
 guide.vampirism.mobs.vampire_minion.text=São subordinados ao seu senhor. / nHave a textura do seu senhor. / nPode ser controlados por jogadores de Lorde vampiro.
 guide.vampirism.mobs.ghost.text=Desova no bioma de vampiro.
+guide.vampirism.mobs.dracula.text=Lorde Vampiro que mora in um grande castelo. Visite a seção Lorde Vampiro para mais informações.
 
 #VampirePlayer
 guide.vampirism.vplayer.category=Características do leitor de vampiro
@@ -74,9 +81,13 @@ guide.vampirism.vlord.introduction.text=Durante todo esse tempo havia um que era
 guide.vampirism.vlord.become.title=Como se tornar um
 guide.vampirism.vlord.become.text=Se você realmente quer tomar o lugar de Dracula, você tem que estar preparado. Certifique-se de que você já atingiu o nível vampiro %d, caso contrário, você não pode nem mesmo chegar até ele. Também se equipe muito bem. /nEntão comece a procurar por biomas Floresta de Vampíro com um castelo no interior. Você pode usar %s para encontrá-lo mais rápido. /nNo edifício do castelo principal dê uma olhada ao redor, você deve ser capaz de encontrar um portal especial, no qual Drácula usa para chegar rapidamente à sua casa. Assim que você estiver em seu castelo principal você tem que derrotá-lo para se tornar um Vampíro Lorde. Boa Sorte.
 guide.vampirism.vlord.about.title=Sobre ser um Lorde
+guide.vampirism.vlord.about.text=Tornar-se um Lorde Vampiro o torna mais forte e dá a você algumas habilidades novas (veja as outras entradas), mas há algumas coisas que você precisa saber. /nAlguns outros vampiros também estão interessados em tornar-se um Lorde Vampiro e há algumas maneiras de você perder sua posição para eles./Primeiramente, não seja morto por um caçador porque perder um nível vampiro o deixa mais fraco para manter suas posições./nAlém disso, saiba que outros vampiros atacarão você. Vampiros em castelos irão, na maioria das vezes, respeitar sua superioridade, mas fora deles há muitos invejosos./nSe você estiver jogando em um servidor multiplayer, leia as regras.
 guide.vampirism.vlord.multiplayer.title=Em Multijogador
+guide.vampirism.vlord.multiplayer.text=Em servidores multiplayer, você também tem que estar ciente de que outros jogadores podem derrotá-lo e substituí-lo como Lorde se eles forem qualificados. / nEste também é o caminho para se tornar o Lorde Vampiro após o primeiro jogador ter derrotado o Drácula. Mas também é possível que outro jogador perca o estado de Lorde, por exemplo, quando ele ficar offline por muito tempo./n/nHá também a opção de configuração para permitir que há vários Lorde Vampiros ao mesmo tempo. Se estiver habilitado, Drácula reaparece e pode ser morto por outro jogador.
 guide.vampirism.vlord.skills.title=Habilidades do Lorde Vampiro
+guide.vampirism.vlord.skills.text=Após derrotar o atual Lorde Vampiro, você também aprenderá algumas habilidades que ele possuía. Eles estão disponíveis no incremento da habilidade normal, mas você pode não ser capaz de usar todas as habilidades velhas. /n/nTeletransporte/nVocê pode se teletransportar a curtas distâncias/n/nInvisibilidade/nFique invisível por um período curto de tempo/n/nCongelar/nCongele todos ao redor por um período curto de tempo
 guide.vampirism.vlord.minions.title=Minions
+guide.vampirism.vlord.minions.text=Como Lorde Vampiro, você é tão poderoso que você pode tornar vampiros em seus escravos. Congele um vampiro e então use sua mordida para intimidá-lo. Ele se tornará seu escravo./nEntão você pode usar %s enquanto o enfrenta para abrir um menu de controle e lhe dar diferentes tarefas./nPara controlar múltiplos escravos ao mesmo tempo, pressione a mesma tecla ao não enfrentar nenhum escravo./n/nOs escravos normais sempre ficarão com você, do contrário eles fugiriam. Para torná-los capazes de cumprir tarefas em outros lugares, você tem que usar o %s sobre eles./nEntão você poderá mandá-los, por exemplo, coletar sangue e, dessa forma, eles ficarão um pouco mais espertos e tentarão fugir do sol. Para nomear seus escravos, você pode usar uma etiqueta de nome especial e barata.
 
 
 
