Implemented version checker

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -116,6 +116,8 @@ text.vampirism.castle_fail=Vampirism was not able to find a appropriate position
 text.vampirism.structure=Structure
 text.vampirism.pillar_blocks=Pillar Blocks
 text.vampirism.no_dracula_to_call=Dracula is dead and cannot be called
+text.vampirism.outdated=You are running Vampirism %s, the latest version is %s.
+text.vampirism.update_message=["Click for... [",{"text":"Download","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the download page","color":"green"}},"clickEvent":{"action":"open_url","value":"@download@"}},"] [",{"text":"Website","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the mod's forum page","color":"green"}},"clickEvent":{"action":"open_url","value":"@forum@"}},"] [",{"text":"Changelog","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this see the version's Changelog","color":"green"}},"clickEvent":{"action":"run_command","value":"/vampirism changelog"}},"]"]
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
