--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -183,16 +183,33 @@ entity.vampirism.hunter_trainer.name=Vampire Hunter Trainer
 
 #RITUALS
 text.vampirism.ritual_missing_items=Missing %s of "%s" for this ritual
+text.vampirism.ritual_night_only=You can only perform this ritual at night
 text.vampirism.trainer_level_wrong=This trainer cannot train you at this level
 
 #BLOCKS
 tile.vampirism.hunterTable.name=Hunter Research Table
+tile.vampirism.castleBlock.name=Castle Block
+tile.vampirism.cursedEarth.name=Cursed Earth
+tile.vampirism.vampireOrchid.name=Vampire Orchid
+tile.vampirism.altarInfusion.name=Altar of Infusion
+tile.vampirism.altarPillar.name=Altar Pillar
+tile.vampirism.altarTip.name=Altar Tip
+tile.vampirism.tent.name=Tent
+tile.vampirism.churchAltar.name=Altar
+tile.vampirism.bloodContainer.name=Blood Container
+tile.vampirism.medChair.name=Vaccination Chair
+
+
 #ITEMS
 item.vampirism.hunterIntel.name=Hunter Intel
 text.vampirism.for_level=for Level
 item.vampirism.injection.name=Syringe
 item.vampirism.injection.garlic.name=Garlic Injection
 item.vampirism.injection.sanguinare.name=Sanguinare Injection
+item.vampirism.itemTent.name=Tent
+item.vampirism.itemCoffin.name=Coffin
+item.vampirism.itemGarlic.name=Garlic
+item.vampirism.itemMedChair.name=Vaccination Chair
 
 #ETC
 text.vampirism.vampire=Vampire
