Implemented "Vampire Vision" system. Added blood vision.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -167,7 +167,7 @@ text.vampirism.skill.unlocks_action=Unlocks action
 text.vampirism.skill.unlock_parent_first=Unlock parent first
 text.vampirism.skill.avoided_by_creepers=Avoided by creepers
 text.vampirism.skill.blood_vision=Blood vision
-text.vampirism.skill.blood_vision.desc=Allows you to see entities through walls
+text.vampirism.skill.blood_vision.desc=Allows you to see entities through walls in the dark. Toggle with key.
 text.vampirism.skill.poisonous_bite=Poisonous Teeth
 text.vampirism.skill.poisonous_bite.desc=Poisons the creatures you bite
 text.vampirism.skill.more_bite_damage=Hardened Teeth
