--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -86,7 +86,7 @@ text.vampirism.coffin.noSleep=You can only sleep at day
 text.vampirism.coffin.occupied=This coffin is occupied
 text.vampirism.coffin.stopsleeping=Leave coffin
 text.vampirism.blood_left=Blood left
-text.vampirism.blood=blood
+text.vampirism.blood=Blood
 text.vampirism.vampirelevel=Vampirelevel
 text.vampirism.entitysblood=Entity's blood
 text.vampirism.minion=Minion
@@ -204,6 +204,7 @@ tile.vampirism.churchAltar.name=Altar
 tile.vampirism.bloodContainer.name=Blood Container
 tile.vampirism.medChair.name=Injection Chair
 tile.vampirism.vampire_orchid.name=Vampire Orchid
+tile.vampirism.firePlace.name=Fire Place
 
 
 #ITEMS
@@ -215,18 +216,25 @@ item.vampirism.injection.sanguinare.name=Sanguinare Injection
 item.vampirism.itemTent.name=Tent
 item.vampirism.itemCoffin.name=Coffin
 item.vampirism.itemGarlic.name=Garlic
-item.vampirism.itemMedChair.name=Vaccination Chair
+item.vampirism.itemMedChair.name=Injection Chair
 item.vampirism.battleAxe.name=Battle Axe
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
 keys.vampirism.action=Use Actions
 
+
+#Achievements
+achievement.vampirism.sucking_blood=Sucking Blood
+achievement.vampirism.becoming_vampire
+
+
 #ETC
 text.vampirism.vampire=Vampire
 text.vampirism.vampires=Vampires
 text.vampirism.hunter=Hunter
 text.vampirism.hunters=Hunter
+text.vampirism.level=Level
 text.vampirism.level_up=Level Up
 text.vampirism.can_only_be_used_by=This can only be used by %s players
 text.vampirism.can_only_be_used_by_level=This can only be used by %s players of level %s or higher
