--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -220,6 +220,9 @@ item.vampirism.itemCoffin.name=Coffin
 item.vampirism.itemGarlic.name=Garlic
 item.vampirism.itemMedChair.name=Injection Chair
 item.vampirism.battleAxe.name=Battle Axe
+item.vampirism.crossbowArrow.name=Crossbow Arrow
+item.vampirism.crossbowArrow.vampireKiller.tooltip=Instantly kills low level vampire NPCs.
+item.vampirism.crossbowArrow.vampireKiller.name=Vampire Killer Arrow
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
@@ -238,6 +241,7 @@ gui.vampirism.hunter_weapon_table.skill=Required Skill: %s
 #ETC
 text.vampirism.vampire=Vampire
 text.vampirism.vampires=Vampires
+text.vampirism.all=All
 text.vampirism.hunter=Hunter
 text.vampirism.hunters=Hunter
 text.vampirism.level=Level
@@ -245,5 +249,7 @@ text.vampirism.level_up=Level Up
 text.vampirism.can_only_be_used_by=This can only be used by %s players
 text.vampirism.can_only_be_used_by_level=This can only be used by %s players of level %s or higher
 text.vampirism.med_chair_other_faction=You cannot become a Hunter since you already are a %s
+text.vampirism.can_only_be_used_with_skill=This can only be used with skill: %s
 text.vampirism.need_item_to_use=You need %s to use this
 text.vampirism.immune_to_=You are immune to
+text.vampirism.required_skill=Required Skill: %s
